Add a sleep_annotation closure
It allows the usage of different velocity correction coefficients when running load_ethoscope.
Also, save some Rd files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(hamming_index)
 export(max_velocity_detector)
 export(max_velocity_detector_legacy)
 export(sleep_annotation)
+export(sleep_annotation_closure)
 export(sleep_dam_annotation)
 export(virtual_beam_cross_detector)
 import(behavr)
