update behavr dependency in aaa.R and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(sleep_annotation)
 export(sleep_annotation_closure)
 export(sleep_dam_annotation)
 export(virtual_beam_cross_detector)
-import(behavr)
+import(fslbehavr)
 importFrom(data.table,"%between%")
 importFrom(data.table,":=")
 importFrom(data.table,"key")
