Improve comments on transition functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(generic_transition)
 export(hamming_index)
 export(max_velocity_detector)
 export(max_velocity_detector_legacy)
+export(p_doze)
+export(p_wake)
 export(sleep_annotation)
 export(sleep_annotation_closure)
 export(sleep_dam_annotation)
