add logging dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(sleep_annotation_closure)
 export(sleep_dam_annotation)
 export(virtual_beam_cross_detector)
 import(fslbehavr)
+import(logging)
 importFrom(data.table,"%between%")
 importFrom(data.table,":=")
 importFrom(data.table,"key")
