--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(bout_analysis)
 export(curate_dead_animals)
+export(custom_annotation_closure)
+export(distance_sum)
+export(fsl_max_velocity_detector)
 export(generic_transition)
 export(hamming_index)
 export(max_velocity_detector)
@@ -11,6 +14,7 @@ export(p_wake)
 export(sleep_annotation)
 export(sleep_annotation_closure)
 export(sleep_dam_annotation)
+export(velocity_avg)
 export(virtual_beam_cross_detector)
 import(fslbehavr)
 import(logging)
