--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,20 +4,26 @@ export(bout_analysis)
 export(curate_dead_animals)
 export(custom_annotation_closure)
 export(distance_sum)
+export(euclidean_distance)
 export(fsl_max_velocity_detector)
+export(fsl_sleep_annotation)
 export(generic_transition)
 export(hamming_index)
 export(max_velocity_detector)
 export(max_velocity_detector_legacy)
 export(p_doze)
 export(p_wake)
+export(prepare_data_for_motion_detector)
 export(sleep_annotation)
 export(sleep_annotation_closure)
 export(sleep_dam_annotation)
 export(velocity_avg)
 export(virtual_beam_cross_detector)
+import(data.table)
 import(fslbehavr)
 import(logging)
 importFrom(data.table,"%between%")
 importFrom(data.table,":=")
 importFrom(data.table,"key")
+importFrom(data.table,data.table)
+importFrom(data.table,setkeyv)
