Make closures of sleep_annotation and sleep_dam_annotation and adapt tests to expect this behavior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(custom_annotation_closure)
 export(distance_sum)
 export(euclidean_distance)
 export(fsl_max_velocity_detector)
-export(fsl_sleep_annotation)
 export(generic_transition)
 export(hamming_index)
 export(max_velocity_detector)
@@ -17,6 +16,7 @@ export(prepare_data_for_motion_detector)
 export(sleep_annotation)
 export(sleep_annotation_closure)
 export(sleep_dam_annotation)
+export(sleep_dam_annotation_closure)
 export(velocity_avg)
 export(virtual_beam_cross_detector)
 import(data.table)
