--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,15 @@
 
 export(bout_analysis)
 export(curate_dead_animals)
-export(custom_annotation_closure)
-export(distance_sum)
+export(custom_annotation_wrapper)
+export(distance_sum_enclosed)
 export(euclidean_distance)
 export(fsl_max_velocity_detector)
 export(generic_transition)
 export(hamming_index)
 export(max_velocity_detector)
 export(max_velocity_detector_legacy)
+export(movement_detector)
 export(p_doze)
 export(p_wake)
 export(prepare_data_for_motion_detector)
