Abstract out annotation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,10 @@ export(euclidean_distance)
 export(fsl_max_velocity_detector)
 export(generic_transition)
 export(hamming_index)
+export(max_movement_detector)
 export(max_velocity_detector)
 export(max_velocity_detector_legacy)
-export(movement_detector)
+export(median_movement_detector)
 export(p_doze)
 export(p_wake)
 export(prepare_data_for_motion_detector)
