Add meta code to update the velocity correction coef used by our custom sleep annotation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(p_wake)
 export(prepare_data_for_motion_detector)
 export(sleep_annotation)
 export(sleep_dam_annotation)
+export(sum_movement_detector)
 export(velocity_avg)
 export(virtual_beam_cross_detector)
 import(data.table)
