--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(curate_dead_animals)
 export(custom_annotation_wrapper)
 export(distance_sum_enclosed)
 export(euclidean_distance)
-export(fsl_max_velocity_detector)
 export(generic_transition)
 export(hamming_index)
 export(max_movement_detector)
@@ -20,8 +19,8 @@ export(sleep_dam_annotation)
 export(sum_movement_detector)
 export(velocity_avg)
 export(virtual_beam_cross_detector)
+import(behavr)
 import(data.table)
-import(fslbehavr)
 import(logging)
 importFrom(data.table,"%between%")
 importFrom(data.table,":=")
